# project-manager

./: .gitignore  Cargo.toml  README.md  flake.nix  result
assets/: demo.tape
src/: data.rs  main.rs  shells.rs
src/shells/: pm.bash  pm.nu  pm.zsh
