[package]
name = "project-jump"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license-file="LICENSE"
repository="https://github.com/IllustratedMan-code/project-jump"
description="A simple CLI tool for visiting project directories"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
